fix: GAP: Bucket - S3 tab- Change to table headers + link account name to account page

--- a/frontend/src/app/components/bucket/bucket-s3-access-list/bucket-s3-access-list.less
+++ b/frontend/src/app/components/bucket/bucket-s3-access-list/bucket-s3-access-list.less
@@ -19,4 +19,21 @@ bucket-s3-access-list {
             }
         }
     }
+
+    data-table {
+        .name-col {
+            text-align: left;
+            min-width: 5em;
+            width: 100%;
+        }
+
+        .recently-used-col {
+            min-width: 150px;
+            display: none;
+        }
+
+        .credentials-details-col {
+            min-width: 100px;
+        }
+    }
 }
